--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
             <nav>
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <%= link_to "Home", new_user_session_path, class: "glyphicon glyphicon-home" %>
+                  <%= link_to "Home", root_path, class: "glyphicon glyphicon-home" %>
                 </li>
                 <li>
-                  <%= link_to "About", new_user_session_path, class: "glyphicon glyphicon-link" %>
+                  <%= link_to "About", home_about_path, class: "glyphicon glyphicon-link" %>
                 </li>
                 <li>
                   <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit" %>
@@ -42,7 +42,10 @@
     </header>
 
     <body>
-      <%= yield %>
+      <div class="container">
+        <p id="notice"></p>
+        <%= yield %>
+      </div>
     </body>
 
     <footer>
