--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,3 @@
 <h1>
-  Weicome to <span class="glyphicon glyphicon-book"><strong>Bookers</strong>!</span>
+  Welcome to <span class="glyphicon glyphicon-book"><strong>Bookers</strong>!</span>
 </h1>
