--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,18 +21,33 @@
           <div class="">
             <nav>
               <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <%= link_to "Home", root_path, class: "glyphicon glyphicon-home" %>
-                </li>
-                <li>
-                  <%= link_to "About", home_about_path, class: "glyphicon glyphicon-link" %>
-                </li>
-                <li>
-                  <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit" %>
-                </li>
-                <li>
-                  <%= link_to "login", new_user_session_path, class: "glyphicon glyphicon-log-in" %>
-                </li>
+                <% if user_signed_in? %>
+                  <li>
+                    <%= link_to " Home", user_path(@user),class: "glyphicon glyphicon-home" %>
+                  </li>
+                  <li>
+                    <%= link_to " Users", users_path, class: "glyphicon glyphicon-user" %>
+                  </li>
+                  <li>
+                    <%= link_to " Books", "#", class: "glyphicon glyphicon-book" %>
+                  </li>
+                  <li>
+                    <%= link_to " logout", destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out" %>
+                  </li>
+                <% else %>
+                  <li>
+                    <%= link_to " Home", root_path, class: "glyphicon glyphicon-home" %>
+                  </li>
+                  <li>
+                    <%= link_to " About", home_about_path, class: "glyphicon glyphicon-link" %>
+                  </li>
+                  <li>
+                    <%= link_to " sign up", new_user_registration_path, class: "glyphicon glyphicon-edit" %>
+                  </li>
+                  <li>
+                    <%= link_to " login", new_user_session_path, class: "glyphicon glyphicon-log-in" %>
+                  </li>
+                <% end %>
               </ul>
             </nav>
           </div>
@@ -43,7 +58,7 @@
 
     <body>
       <div class="container">
-        <p id="notice"></p>
+          <p id="notice"></p>
         <%= yield %>
       </div>
     </body>
