--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,10 @@
-<h1>fuu!</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Editing Book</h1>
+    <%= render 'books/form', book: @book %>
+
+    <%= link_to "Show", book_path(@book) %>
+    |
+    <%= link_to "Back", books_path %>
+  </div>
+</div>
