--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,40 @@
-<h1>fuu!</h1>
+<div class="row">
+  <div class="col-xs-3">
+    <h2>User info</h2>
+    <%= render 'users/info', user: current_user %>
+
+    <h2>New book</h2>
+    <%= render 'books/form', book: @new_book %>
+
+  </div>
+  <div class=" col-xs-9">
+    <h2>Users</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td>
+            <%= link_to user_path(book.user) do %>
+              <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size: '40x40' %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to book_path(book) do %>
+              <%= book.title %>
+            <% end %>
+          </td>
+          <td><%= book.body %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
