--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,33 @@
-<h1>fuu!</h1>
+<div class="row">
+  <div class="col-xs-3">
+    <h2>User info</h2>
+    <%= render 'users/info', user: @user %>
+
+    <h2>New book</h2>
+    <%= render 'books/form', book: @book %>
+
+  </div>
+    <div class=" col-xs-9">
+    <h2>Book detail</h2>
+    <table class="table">
+      <tbody>
+        <tr>
+          <td>
+            <%= link_to user_path(@user) do %>
+            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size: '100x100' %>
+            <p><%= @user.name %></p>
+            <% end %>
+          </td>
+          <td><%= @book.title %></td>
+          <td><%= @book.body %></td>
+
+          <% if @user.id == current_user.id %>
+          <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success"%></td>
+          <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-danger" %></td>
+          <% end%>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
