--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,15 +13,15 @@
 
   <div class="row">
     <div class="mb-10">
-      <label>Name</label>
+      <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
     <div class="mb-10">
-      <label>Image</label>
+      <%= f.label :image %>
       <%= f.attachment_field :profile_image %>
     </div>
     <div class="mb-10">
-      <label>Introduction</kabel>
+      <%= f.label :introduction %>
       <%= f.text_area :introduction %>
     </div>
     <%= f.submit "Updeate User" %>
