--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,40 @@
-<p id="notice">
-  <%= notice %>
-</p>
 <div class="row">
   <div class="col-xs-3">
     <h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-    <table class="table">
-      <tr></tr>
-      <tr>
-        <th>name</th>
-        <th><%= @user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th>
-        <th><%= @user.introduction %></th>
-      </tr>
-    </table>
-    <div class="row">
-      <% if @user.id == current_user.id %>
-        <%= link_to "", edit_user_path(@user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-      <% else %>
-        <%= link_to "", user_path(current_user.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-      <% end %>
-    </div>
-    <h2>New book</h2>
-    <%= form_with model:@book, local:true do |f| %>
-    <div class="row">
-      <label>Title</label>
-      <%= f.text_field :title, class: "col-xs-12" %>
-    </div>
-    <div class="row">
-      <label>Opinion</label>
-      <%= f.text_area :body, class: "col-xs-12" %>
-    </div>
-    <div class="row">
-      <%= f.submit "Create Book", class: "col-xs-12 btn btn-primary" %>
-    </div>
-    <% end %>
+    <%= render 'users/info', user: @user %>
 
+    <h2>New book</h2>
+    <%= render 'books/form', book: @book %>
+
+  </div>
+  <div class=" col-xs-9">
+    <h2>Books</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td>
+            <%= link_to user_path(@user) do %>
+              <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size: '40x40' %>
+            <% end %>
+            </td>
+          <td>
+            <%= link_to book_path(book) do %>
+              <%= book.title %>
+            <% end %>
+            </td>
+          <td><%= book.body %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
