--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,13 +1,14 @@
-    <%= form_with model: book, local: true do |f| %>
-    <div class="row">
-      <%= f.label :title %>
-      <%= f.text_field :title, class: "col-xs-12" %>
-    </div>
-    <div class="row">
-      <%= f.label :opinion %>
-      <%= f.text_area :body, class: "col-xs-12" %>
-    </div>
-    <div class="row">
-      <%= f.submit "Create Book", class: "col-xs-12 btn btn-primary" %>
-    </div>
-    <% end %>
+<%= form_with model: book, local: true do |f| %>
+
+  <div class="field row">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "col-xs-12" %>
+  </div>
+  <div class=" field row">
+    <%= f.label :opinion %>
+    <%= f.text_area :body, class: "col-xs-12" %>
+  </div>
+  <div class="row">
+    <%= f.submit "Create Book", class: "col-xs-12 btn btn-primary" %>
+  </div>
+<% end %>
