--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,14 @@
+<%= render 'books/message', book: @new_book %>
 <div class="row">
   <div class="col-xs-3">
     <h2>User info</h2>
     <%= render 'users/info', user: @user %>
 
     <h2>New book</h2>
-    <%= render 'books/form', book: @book %>
+    <%= render 'books/form', book: @new_book %>
 
   </div>
+  
     <div class=" col-xs-9">
     <h2>Book detail</h2>
     <table class="table">
@@ -23,7 +25,7 @@
 
           <% if @user.id == current_user.id %>
           <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success"%></td>
-          <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-danger" %></td>
+          <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-danger", data: { confirm: "本当に消しますか？" } %></td>
           <% end%>
 
         </tr>
