--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'books/message', book: @book %>
 <div class="row">
   <div class="col-xs-3">
     <h2>User info</h2>
@@ -9,7 +10,7 @@
   </div>
   <div class=" col-xs-9">
     <h2>Books</h2>
-    <table class="table">
+    <table class="table table-hover table-inverse">
       <thead>
         <tr>
           <th></th>
