--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
         <% flash.each do |key, value| %>
         <% end %>
         <p id="notice">
-          <p><%= notice %></p>
+          <p class="text-success col-xs-3"><%= notice %></p>
         </p>
       </div>
 
