--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,6 @@
       <%= f.label :introduction %>
       <%= f.text_area :introduction %>
     </div>
-    <%= f.submit "Updeate User" %>
+    <%= f.submit "Update User" %>
   </div>
 <% end %>
