--- a/app/views/books/_message.html.erb
+++ b/app/views/books/_message.html.erb
@@ -1,3 +1,4 @@
+<div class="message">
 <% if book.errors.any? %>
   <h3><%= pluralize(book.errors.count, "error")%> prohibited this book from being saved:</h3>
 
@@ -7,3 +8,4 @@
     <% end %>
   </ul>
 <% end %>
+</div>
