--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,20 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <h1>Editing Book</h1>
-    <%= render 'books/form', book: @book %>
-
+    <%= form_with model: @book, local: true do |f| %>
+    <%= render 'books/message', book: @book %>
+      <div class="field row">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "col-xs-12" %>
+      </div>
+      <div class=" field row">
+        <%= f.label :opinion %>
+        <%= f.text_area :body, class: "col-xs-12" %>
+      </div>
+      <div class="row">
+        <%= f.submit "Update Book", class: "col-xs-12 btn btn-primary" %>
+      </div>
+    <% end %>
     <%= link_to "Show", book_path(@book) %>
     |
     <%= link_to "Back", books_path %>
