--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -33,6 +33,24 @@
             <% end %>
           </td>
           <td><%= book.body %></td>
+          <td>
+            <!-- いいね機能 -->
+            <% if book.favorited_by?(current_user) %>
+						<p>
+							<%= link_to book_favorites_path(book), method: :delete do %>
+								<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+								<%= book.favorites.count %>
+							<% end %>
+						</p>
+						<% else %>
+						<p>
+							<%= link_to book_favorites_path(book), method: :post do %>
+								<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+								<%= book.favorites.count %>
+							<% end %>
+						</p>
+						<% end %>
+          </td>
         </tr>
         <% end %>
       </tbody>
