--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -51,6 +51,10 @@
 						</p>
 						<% end %>
           </td>
+          <!-- コメント数 -->
+					<td>
+						<span>コメント数: <%= book.book_coments.count %></span>
+					</td>
         </tr>
         <% end %>
       </tbody>
