--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -53,7 +53,7 @@
           </td>
           <!-- コメント数 -->
 					<td>
-						<span>コメント数: <%= book.book_coments.count %></span>
+						<span>コメント数: <%= book.book_comments.count %></span>
 					</td>
         </tr>
         <% end %>
