--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,7 +43,7 @@
 					</td>
 					<!-- コメント数 -->
 					<td>
-						<span>コメント数: <%= @book.book_coments.count %></span>
+						<span>コメント数: <%= @book.book_comments.count %></span>
 					</td>
 					<% if @book.user == current_user%>
 						<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -51,13 +51,31 @@
 					<% end %>
 				</tr>
 			</table>
-			<%= form_with (model: [:@book, :@book_comment], local: true) do |f| %>
-			<div class="col-xs-9">
-				<%= f.text_area :comment, rows:'5' %>
 			</div>
-			<%= f,submit "送信" %>
-			<% end %>
+			<div class: "d-flex flex-row">
+				<div>
 
+				</div>
+				<div>
+					<% @book.book_comments.each do |book_comment| %>
+					<%= link_to user_path(@book.user) do %>
+						<%= attachment_image_tag(@book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg") %><br>
+					<%= @book.user.name %>
+					<% end %>
+						<%= book_comment.comment %>
+					<% end %>
+				</div>
+				<div>
+		  		<%=link_to "Destroy", book_book_comment_path(@book), method: :delete, class: "btn-sm btn-danger" %>
+		  	</div>
+			</div>
+
+			<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+				<div>
+					<%= f.text_area :comment, rows:'4', class: "col-xs-7" %>
+				</div>
+				<%= f.submit "送信" %>
+			<% end %>
 	</div>
 </div>
 
