--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,9 @@
 
 <div class="row">
-	<div class="col-xs-3">
+	<div class="col-xs-3 col_">
 
 		<h2>User info</h2>
-		<%= render 'users/info', user: @user %>
+		<%= render 'users/info', user: current_user %>
 
 		<h2>New book</h2>
 		<%= render 'books/form', book: @new_book %>
@@ -12,70 +12,69 @@
 
 	<div class="col-xs-9">
 		<h2>Book detail</h2>
-
 		<table class="table">
-				<tr>
-					<td>
-						<%= link_to user_path(@book.user) do %>
-							<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, book_path(@book) %></td>
-					<td><%= @book.body %></td>
-					<!-- いいね機能 -->
-					<td>
-						<% if @book.favorited_by?(current_user) %>
-						<p>
-							<%= link_to book_favorites_path(@book), method: :delete do %>
-								<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-								<%= @book.favorites.count %>
-							<% end %>
-						</p>
-						<% else %>
-						<p>
-							<%= link_to book_favorites_path(@book), method: :post do %>
-								<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-								<%= @book.favorites.count %>
-							<% end %>
-						</p>
-						<% end %>
-					</td>
-					<!-- コメント数 -->
-					<td>
-						<span>コメント数: <%= @book.book_comments.count %></span>
-					</td>
-					<% if @book.user == current_user%>
-						<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-						<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-					<% end %>
-				</tr>
-			</table>
-			</div>
-			<div class: "d-flex flex-row">
-				<div>
-
-				</div>
-				<div>
-					<% @book.book_comments.each do |book_comment| %>
+			<tr>
+				<td>
 					<%= link_to user_path(@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg") %><br>
-					<%= @book.user.name %>
+						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100') %><br>
+						<%= @book.user.name %>
 					<% end %>
-						<%= book_comment.comment %>
+				</td>
+				<td><%= link_to @book.title, book_path(@book) %></td>
+				<td><%= @book.body %></td>
+				<!-- いいね機能 -->
+				<td>
+					<% if @book.favorited_by?(current_user) %>
+					<p>
+						<%= link_to book_favorites_path(@book), method: :delete do %>
+							<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+							<%= @book.favorites.count %>
+						<% end %>
+					</p>
+					<% else %>
+					<p>
+						<%= link_to book_favorites_path(@book), method: :post do %>
+							<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+							<%= @book.favorites.count %>
+						<% end %>
+					</p>
 					<% end %>
-				</div>
-				<div>
-		  		<%=link_to "Destroy", book_book_comment_path(@book), method: :delete, class: "btn-sm btn-danger" %>
-		  	</div>
-			</div>
-
-			<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-				<div>
-					<%= f.text_area :comment, rows:'4', class: "col-xs-7" %>
-				</div>
-				<%= f.submit "送信" %>
-			<% end %>
+				</td>
+				<!-- コメント数 -->
+				<td>
+					<span>コメント数: <%= @book.book_comments.count %></span>
+				</td>
+				<% if @book.user == current_user%>
+					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+				<% end %>
+			</tr>
+		</table>
 	</div>
-</div>
 
+ 	<div class="col-xs-9">
+ 		<table>
+ 			<% @book.book_comments.each do |book_comment| %>
+ 			<tr>
+ 				<td>
+ 					<%= link_to user_path(book_comment.user) do %>
+						<%= attachment_image_tag(book_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", size: '60x60') %><br>
+						<%= book_comment.user.name %>
+					<% end %>
+ 				</td>
+				<td><%= book_comment.comment %></td>
+				<td>
+					<% if book_comment.user == current_user %>
+						<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>					<% end %>
+					<% end %>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="col-xs-9">
+		<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+			<%= f.text_area :comment, rows:'4', class: "col-xs-7" %>
+			<%= f.submit "送信" %>
+		<% end %>
+	</div>
