--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,8 @@
         <tr>
           <td><%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size: '40x40' %></td>
           <td><%= user.name %></td>
+          <td>フォロー数：<%= user.followings.count %></td>
+          <td>フォロワー数：<%= user.followers.count %></td>
           <td><%= link_to "Show", user_path(user) %></td>
         </tr>
         <% end %>
