フォロー機能　完了

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -11,7 +11,7 @@
       </tr>
       <tr>
         <th>follows</th>
-        <th><%= link_to user.followings.count, followings_user_path(user) %></th>
+        <th><%= link_to user.followings.count, follows_user_path(user) %></th>
       </tr>
       <tr>
         <th>followers</th>
