--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,8 @@
         </p>
       </div>
 
+      <%= render 'layouts/search' %>
+
       <div class="container">
         <%= yield %>
       </div>
