--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
         </p>
       </div>
 
-      <%= render 'layouts/search' %>
+      <div class="search"><%= render 'layouts/search' %></div>
 
       <div class="container">
         <%= yield %>
