--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,24 +22,12 @@
 				</td>
 				<td><%= link_to @book.title, book_path(@book) %></td>
 				<td><%= @book.body %></td>
+
 				<!-- いいね機能 -->
-				<td>
-					<% if @book.favorited_by?(current_user) %>
-					<p>
-						<%= link_to book_favorites_path(@book), method: :delete do %>
-							<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-							<%= @book.favorites.count %>
-						<% end %>
-					</p>
-					<% else %>
-					<p>
-						<%= link_to book_favorites_path(@book), method: :post do %>
-							<span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-							<%= @book.favorites.count %>
-						<% end %>
-					</p>
-					<% end %>
+				<td id ="favorites_btn_<%= @book.id %>" >
+					<%= render 'favorites/favorites_btn', book: @book %>
 				</td>
+
 				<!-- コメント数 -->
 				<td>
 					<span>コメント数: <%= @book.book_comments.count %></span>
@@ -53,28 +41,13 @@
 	</div>
 
  	<div class="col-xs-9">
- 		<table>
- 			<% @book.book_comments.each do |book_comment| %>
- 			<tr>
- 				<td>
- 					<%= link_to user_path(book_comment.user) do %>
-						<%= attachment_image_tag(book_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", size: '60x60') %><br>
-						<%= book_comment.user.name %>
-					<% end %>
- 				</td>
-				<td><%= book_comment.comment %></td>
-				<td>
-					<% if book_comment.user == current_user %>
-						<%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>					<% end %>
-					<% end %>
-				</td>
-			</tr>
-		</table>
-	</div>
+ 		<div id ="comments_area">
+			<%= render 'book_comments/comments_index', book: @book %>
+		</div>
 
-	<div class="col-xs-9">
-		<%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-			<%= f.text_area :comment, rows:'4', class: "col-xs-7" %>
-			<%= f.submit "送信" %>
-		<% end %>
-	</div>
+<div class="col-xs-9">
+	<%= form_with(model:[@book, @book_comment], remote: true) do |f| %>
+		<%= f.text_area :comment, rows:'4', class: "col-xs-7" %>
+		<%= f.submit "送信" %>
+	<% end %>
+</div>
