--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,13 +5,38 @@
       <div class="message"><%= render "devise/shared/error_messages", resource: resource %></div>
 
       <div class="field">
-        <%= f.label :name %><br />
+        <%= f.label :name, '名前' %><br />
         <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
       </div>
 
       <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :postcode, '郵便番号' %><br />
+        <%= f.text_field :postcode, autofocus: true, autocomplete: "postcode" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :prefecture_name, '都道府県' %><br />
+        <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: '選択してください'} %>
+      </div>
+
+      <div class="field">
+        <%= f.label :address_city, '市区町村' %><br />
+        <%= f.text_field :address_city, autofocus: true, autocomplete: "address_city" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :address_street, '番地' %><br />
+        <%= f.text_field :address_street, autofocus: true, autocomplete: "address_street" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :address_building, '建物' %><br />
+        <%= f.text_field :address_building, autofocus: true, autocomplete: "address_building" %>
       </div>
 
       <div class="field">
