--- a/app/views/books/_message.html.erb
+++ b/app/views/books/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="message">
+<div class="error_message">
 <% if book.errors.any? %>
   <h3><%= pluralize(book.errors.count, "error")%> prohibited this book from being saved:</h3>
 
