--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-9">
-      <h2><%= @user.name %>さんとのチャット</h2>
+      <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %>さんとのチャット</h2>
       <table class="message table">
         <thead>
           <tr>
@@ -23,7 +23,9 @@
         <tbody>
           <tr>
             <td></td>
-            <td style="text-align: right;"><%= chat.message %></td>
+            <td>
+              <p style="text-align: right;"><%= chat.message %></p>
+            </td>
           </tr>
         </tbody>
         <% end %>
